修改包的归属

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myallcomponents",
-  "description": "my vue components",
+  "name": "mycomponentsvue",
+  "description": "my vue components:[inputSearch]",
   "version": "0.0.1",
   "author": "zhouzhenhan <1659725767@qq.com>",
   "license": "MIT",
