--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mycomponentsvue",
-  "description": "my vue components:[inputSearch]",
+  "description": "my vue components:[inputSearch,selectSearch]",
   "version": "0.0.4",
   "author": "zhouzhenhan <1659725767@qq.com>",
   "license": "MIT",
