--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mycomponentsvue",
   "description": "my vue components:[inputSearch,selectSearch]",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "zhouzhenhan <1659725767@qq.com>",
   "license": "MIT",
   "private": false,
-  "main": "dist/build.js",
+  "main": "dist/mycomponentsvue.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
