--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mycomponentsvue",
   "description": "my vue components:[inputSearch,selectSearch]",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "author": "zhouzhenhan <1659725767@qq.com>",
   "license": "MIT",
   "private": false,
@@ -25,11 +25,13 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "element-ui": "^2.15.5",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
+    "vuedraggable": "^2.24.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
