--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mycomponentsvue",
-  "description": "my vue components:[inputSearch,selectSearch]",
-  "version": "0.0.14",
+  "description": "my vue components:[inputSearch,selectSearch, dragGroup, colorPick]",
+  "version": "0.0.15",
   "author": "zhouzhenhan <1659725767@qq.com>",
   "license": "MIT",
   "private": false,
